@@ -1,3 +1,4 @@
+Revision 94 	 2010-11-23 	 Fix for groupname of staff mebers 
 Revision 93 	 2010-11-21 	 Minor changes 
 Revision 92 	 2010-11-18 	 Changing author name 
 Revision 91 	 2010-11-13 	 Adding IE6NoMore 
